# synapto

./: .env  .gitignore  CONTRIBUTION.md  Cargo.toml  README.md  clippy.toml  config.json  justfile  release.toml
.github/ISSUE_TEMPLATE/: feature_proposal_rfc.md
contrib/: Cargo.toml  justfile
contrib/datadir-providers/local/: Cargo.toml
contrib/datadir-providers/local/tests/: scenario_tests.rs
contrib/plugins/clock/: Cargo.toml
contrib/plugins/clock/src/: lib.rs
contrib/plugins/clock/tests/: scenario_tests.rs
contrib/plugins/linux-host-audio/: Cargo.toml
contrib/plugins/linux-host-audio/src/: capture.rs  lib.rs  speaker.rs
contrib/plugins/linux-host-audio/tests/: scenario_tests.rs
contrib/plugins/mumble/: Cargo.toml
contrib/plugins/mumble/src/: audio_utils.rs  lib.rs
contrib/plugins/mumble/tests/: config.json  scenario_tests.rs
contrib/plugins/stt-elevenlabs/: Cargo.toml
contrib/plugins/stt-elevenlabs/src/: lib.rs
contrib/plugins/stt-elevenlabs/tests/: config.json  scenario_tests.rs
contrib/plugins/stt-google/: Cargo.toml
contrib/plugins/stt-google/src/: lib.rs
contrib/plugins/stt-google/tests/: config.json  scenario_tests.rs
contrib/plugins/stt-speechmatics/: Cargo.toml
contrib/plugins/stt-speechmatics/src/: lib.rs
contrib/plugins/stt-speechmatics/tests/: config.json  scenario_tests.rs
contrib/plugins/tts-elevenlabs/: Cargo.toml
contrib/plugins/tts-elevenlabs/src/: lib.rs
contrib/plugins/tts-elevenlabs/tests/: config.json  scenario_tests.rs
contrib/plugins/tts-google/: Cargo.toml
contrib/plugins/tts-google/src/: lib.rs
contrib/plugins/tts-google/tests/: config.json  scenario_tests.rs  tts_google_integration_test.rs
contrib/prompt-providers/file/: Cargo.toml
contrib/prompt-providers/file/src/: lib.rs
contrib/prompt-providers/file/tests/: scenario_tests.rs
contrib/storage-providers/firestore/: Cargo.toml
contrib/storage-providers/firestore/src/: lib.rs
contrib/storage-providers/firestore/tests/: scenario_tests.rs
contrib/synapto-battery-pack/: Cargo.toml  LICENSE-APACHE  README.md  build.rs  docs.handlebars.md
crates/core/: Cargo.toml
crates/core/src/: cognitive.rs  config.rs  enveloped.rs  google_credentials.rs  interactions.rs  lib.rs  prompt_provider.rs  speaking_coordinator.rs  speech_to_text.rs  system_prompt.rs  users.rs  utils.rs
crates/core/src/cognitive/: direct.rs  processor.rs  prompt_provider.rs  side.rs  speaking_coordinator.rs  types.rs
crates/core/src/config/: data_dir.rs  dotenv.rs  env.rs  json.rs  provider.md  provider.rs
crates/core/src/interactions/: not_clear.rs  recent.rs  types.rs
crates/core/src/speech_to_text/: detect_voice.rs  speaker_transcript_alignment.rs
crates/core/src/utils/: audio.rs  schema.rs
crates/derive/: Cargo.toml
crates/derive/src/: lib.rs
crates/interface/: Cargo.toml  README.md
crates/interface/src/: audio_recorder.rs  call.rs  camera.rs  chat.rs  cognitive.rs  cognitive_output_audio.rs  cognitive_output_text.rs  command.md  command.rs  context.md  context.rs  data_dir.rs  document.rs  gui.rs  interaction.md  interaction.rs  lib.rs  llm.rs  peer_input.rs  peer_input_audio.rs  peer_input_text.rs  plugin.rs  rollout.rs  secrets.rs  speech_to_text.rs  storage.md  storage.rs  sync.rs  tool.md  tool.rs  types.rs
crates/interface/src/cognitive_output_audio/: types.rs
crates/interface/src/cognitive_output_text/: types.rs
crates/interface/src/peer_input_audio/: types.rs
crates/interface/src/peer_input_text/: types.rs
crates/interface/src/speech_to_text/: types.rs
crates/interface/src/types/: documents.rs
crates/llm/: Cargo.toml
crates/llm-client/: Cargo.toml
crates/llm-client/src/: lib.rs
crates/llm/src/: ext.rs  instruction.rs  lib.rs
crates/shutdown/: Cargo.toml
crates/shutdown/src/: lib.rs
crates/telemetry/: Cargo.toml  README.md
crates/telemetry/src/: graph_layer.rs  lib.rs  rerun.rs  rerun_logging.rs  tracing.rs
crates/test/: .env  Cargo.toml
crates/test/datadir-providers/ephemeral/: Cargo.toml
crates/test/datadir-providers/ephemeral/src/: lib.rs
crates/test/scenarios/behavioral-memory-test/: scenario.yaml
crates/test/src/: lib.rs  local_storage.rs  test_datadir.rs
crates/test/src/plugins/: chat.rs  diarization.rs  documents.rs  mod.rs  stt.rs  tools.rs  tts.rs
crates/test/storage-providers/local/: Cargo.toml
crates/test/storage-providers/local/src/: lib.rs
crates/test/tests/: scenario_tests.rs
crates/test/tests/scenarios/async-tool-reaction/: scenario.yaml
crates/test/tests/scenarios/document-summary/: platform.md  scenario.yaml
crates/test/tests/scenarios/multi-assert-test/: scenario.yaml
docs/: ARCHITECTURE.md  CONFIG_PROVIDERS.md  CREATE_BUNDLE.md  CREATE_PLUGIN.md  DEVELOPMENT.md  DOCUMENTATION.md  IDEAS.md  TESTING.md  book.toml
docs/src/: ARCHITECTURE.md  DOCUMENTATION.md  RELEASE.md  SUMMARY.md  TESTING.md  config_providers.md  creating_bundles.md  telemetry.md  (+1 more)
integrations/: Cargo.toml
integrations/plugins/clock/: Cargo.toml
integrations/plugins/clock/src/: lib.rs
integrations/plugins/clock/tests/: scenario_tests.rs
integrations/plugins/stt-elevenlabs/: Cargo.toml
integrations/plugins/stt-elevenlabs/tests/: scenario_tests.rs
integrations/plugins/tts-elevenlabs/: Cargo.toml
integrations/plugins/tts-elevenlabs/tests/: scenario_tests.rs
test-harness/: .env  .justfile  Cargo.toml  README.md
test-harness/datadir-providers/ephemeral/: Cargo.toml
test-harness/plugins/: chat.rs  diarization.rs  stt.rs  tools.rs  tts.rs
test-harness/scenarios/async-tool-dual-channel/: scenario.yaml
test-harness/scenarios/document-summary/: scenario.yaml
test-harness/scenarios/edge-cases-test/: scenario.yaml
test-harness/scenarios/file-summary-speech/: bitcoin.md  scenario.yaml
test-harness/scenarios/google-chat-plugin-test/: scenario.yaml
test-harness/scenarios/rag-context-filtering/: scenario.yaml
test-harness/scenarios/read-url-test/: scenario.yaml
test-harness/src/: main.rs
test-harness/storage-providers/local/: Cargo.toml
test-harness/storage-providers/local/src/: lib.rs
(+21 files in other folders)
