[workspace]
resolver = "2"

members = [
    "crates/*",
]

[workspace.package]
license = "MPL-2.0"
repository = "https://github.com/synapto-ai/synapto"

[workspace.dependencies]
synapto = {path="crates/core", version = "0.1.0" }
synapto-derive = {path="crates/derive", version = "0.1.0" }
synapto-interface = {path="crates/interface", version = "0.1.0" }
synapto-telemetry = {path="crates/telemetry", version = "0.1.0"}
synapto-llm-client = {path="crates/llm-client", version = "0.1.0"}
synapto-shutdown = {path="crates/shutdown", version = "0.1.0" }

schemars = "1.2"
serde = { version = "1", default-features = false, features = [
    "derive",
    "alloc",
] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
tokio = { version = "1", features = ["macros", "signal", "rt", "rt-multi-thread", "net", "time"] }
bytes = "1"
derive_more= {version = "2", features=["full"]}
async-trait= "0.1"
tracing = "0.1"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
let_underscore_must_use = "deny"
unwrap_used = "deny"
disallowed_methods = "deny"
todo = "warn"
