[workspace]
resolver = "2"

members = [
    "crates/*",
    # "test-harness",
]

[workspace.package]
license = "MPL-2.0"
repository = "https://github.com/synapto-ai/synapto"

[workspace.dependencies]
synapto = {path="crates/core" }
synapto-derive = {path="crates/derive" }
synapto-interface = {path="crates/interface" }
synapto-telemetry = {path="crates/telemetry"}
synapto-llm = {path="crates/llm"}
synapto-shutdown = {path="crates/shutdown" }

schemars = "1.2"
serde = { version = "1", default-features = false, features = [
    "derive",
    "alloc",
] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
tokio = { version = "1", features = ["macros", "signal", "rt", "rt-multi-thread", "net", "time"] }
better_tokio_select = "0.2.0"
bytes = "1"
derive_more= {version = "2", features=["full"]}
async-trait= "0.1"
tracing = "0.1"

[workspace.lints.rust]
unsafe_code = "deny"
unreachable_pub = "warn"

[workspace.lints.clippy]
let_underscore_must_use = "deny"
unwrap_used = "deny"
disallowed_methods = "deny"
disallowed_macros = "deny"
todo = "warn"
