[package]
name = "synapto-derive"
version.workspace = true
edition = "2024"

description = "Derive macros for the Synapto framework"

license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["derive", "parsing", "proc-macro"] }
quote = "1.0"
