[package]
name = "synapto-llm-client"
description = "LLM client implementation for the Allusio AI framework"

version = "0.1.0"
edition = "2024"
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
default = []
rerun = ["synapto-telemetry/rerun"]

[dependencies]
synapto-interface.workspace = true
synapto-telemetry.workspace = true
schemars.workspace = true
tokio.workspace = true
async-trait.workspace = true
tracing.workspace = true
serde = { workspace = true, features = ["std"] }
serde_json = { workspace = true, features = ["std"] }

serde_yaml = "*"
gcp_auth = { version = "0.12" }
genai = { version = "0.6" }
anyhow = "1.0"
