[package]
name = "synapto-shutdown"
description = "Graceful shutdown utilities for the Synapto framework"

version.workspace = true
edition = "2024"
license.workspace = true
repository.workspace = true

[dependencies]
synapto-interface.workspace = true

tracing.workspace = true

[lints]
workspace = true
