[package]
name = "synapto-telemetry"
description = "Telemetry and tracing definitions for the Synapto framework"

version = "0.1.0-dev.1"
edition = "2024"
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
default = []
rerun = ["dep:rerun"]
tracy = ["dep:tracing-tracy", "dep:tracy-client"]

[dependencies]
better_tokio_select = { workspace = true }
tracing.workspace = true
synapto-shutdown.workspace = true
tokio = { workspace = true, features = ["sync", "time", "rt"] }

tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
file-rotate = "0.8"
chrono = { version = "0.4" }
dashmap = "6"
rerun = { version = "0.33", optional = true, default-features=false, features=["sdk"] }
tracing-tracy = { version = "0.11", optional = true, features = ["manual-lifetime"] }
tracy-client = { version = "0.18", optional = true, features = ["manual-lifetime"] }
