[package]
name = "synapto-test"
version.workspace = true
edition = "2024"
license.workspace = true
repository.workspace = true

[dependencies]
better_tokio_select = { workspace = true }
synapto = { workspace = true, features = ["rerun"] }
synapto-interface.workspace = true
serde.workspace = true
schemars.workspace = true
serde_json.workspace = true
serde_yaml = { version = "*" }
async-trait = { version = "*" }
tracing.workspace = true
clap = { version = "*", features = ["derive", "env"] }
claxon = "0.4"
tokio.workspace = true

synapto-datadir-ephemeral = { path = "datadir-providers/ephemeral" }
synapto-storage-local = { path = "storage-providers/local" }
synapto-shutdown.workspace = true
