[package]
name = "synapto-test"
description = "Testing harness and simulator for synapto"
version.workspace = true
edition = "2024"
license.workspace = true
repository.workspace = true

[dependencies]
better_tokio_select = { workspace = true }
synapto = { workspace = true, features = ["rerun"] }
synapto-interface.workspace = true
serde.workspace = true
schemars.workspace = true
serde_json.workspace = true
serde_yaml = { workspace = true }
async-trait = { workspace = true }
tracing.workspace = true
clap = { version = "4", features = ["derive", "env"] }
claxon = "0.4"
tokio.workspace = true
tempfile = "3"

synapto-shutdown.workspace = true
