[package]
name = "datadir-local"
version = "0.1.0-dev.1"
edition = "2024"
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
synapto-interface.workspace = true
dirs = "5"

[dev-dependencies]
synapto-test.workspace = true
test-storage-local = { package = "synapto-storage-local", path = "../../../crates/test/storage-providers/local" }
test-datadir-ephemeral = { package = "synapto-datadir-ephemeral", path = "../../../crates/test/datadir-providers/ephemeral" }
tokio.workspace = true
