[package]
name = "datadir-local"
version = "0.1.0-dev.1"
edition = "2024"
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
synapto-interface.workspace = true
dirs = "5"

[dev-dependencies]
synapto-test.workspace = true
tokio.workspace = true
synapto.workspace = true
