[package]
name = "synapto-plugin-clock"
version = "0.1.0-dev.1"
edition = "2024"
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
synapto-interface.workspace = true
async-trait.workspace = true
serde.workspace = true
schemars.workspace = true
chrono = { version = "0.4" }
