[package]
name = "synapto-plugin-clock"
version.workspace = true
edition = "2024"
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
synapto-interface.workspace = true
async-trait.workspace = true
serde.workspace = true
schemars.workspace = true
chrono = { version = "0.4" }

[dev-dependencies]
synapto-test.workspace = true
synapto.workspace = true
test-storage-local = { package = "synapto-storage-local", path = "../../../crates/test/storage-providers/local" }
test-datadir-ephemeral = { package = "synapto-datadir-ephemeral", path = "../../../crates/test/datadir-providers/ephemeral" }
tokio.workspace = true

