[package]
name = "synapto-plugin-linux-host-audio"
version.workspace = true
edition = "2024"
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
synapto-interface.workspace = true
serde.workspace = true
schemars.workspace = true
async-trait.workspace = true
tracing.workspace = true

pipewire = { version = "0.10", features = ["v0_3_44"] }
libspa = "0.10"
libspa-sys = "0.10"
ogg = "0.9"
opus = "0.3"

[dev-dependencies]
synapto-test.workspace = true
synapto.workspace = true
test-storage-local = { package = "synapto-storage-local", path = "../../../crates/test/storage-providers/local" }
test-datadir-ephemeral = { package = "synapto-datadir-ephemeral", path = "../../../crates/test/datadir-providers/ephemeral" }
tokio.workspace = true
