[package]
name = "synapto-plugin-mumble"
version = "0.1.0-dev.1"
edition = "2024"
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
better_tokio_select = { workspace = true }
synapto-interface.workspace = true
tokio = {workspace=true}
serde = {workspace=true}
serde_json = {workspace=true}
schemars = {workspace=true}
async-trait = {workspace=true}
bytes = {workspace=true}
tracing = {workspace=true}

# From original mumble feature
mumble-protocol = { version = "0.4" }
tokio-native-tls = "0.3"
tokio-util = { version = "0.6", features = ["codec"] }
futures = "0.3"
opus = "0.3"
ogg = "0.8"
anyhow = "1.0"
