[package]
name = "synapto-plugin-stt-elevenlabs"
version = "0.1.0-dev.1"
edition = "2024"
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
better_tokio_select = { workspace = true }
synapto-interface.workspace = true
async-trait.workspace = true
serde.workspace = true
tokio = { workspace = true, features = ["sync", "time", "rt", "macros"] }
tracing.workspace = true
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots", "url"] }
url = "*"
futures = "0.3"
serde_json.workspace = true
data-encoding = "2"
rustls = { version = "*", features = ["ring"] }
