[package]
name = "synapto-plugin-stt-google"
version.workspace = true
edition = "2024"
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
better_tokio_select = { workspace = true }
synapto-interface.workspace = true
async-trait.workspace = true
serde.workspace = true
tokio = { workspace = true, features = ["sync", "time", "rt", "macros"] }
tracing.workspace = true
gcp_auth = "0.12"
tonic = { version = "0.14", features = ["tls-native-roots"] }
tokio-stream = "0.1"
googleapis-tonic-google-cloud-speech-v1 = "0.34"
googleapis-tonic-google-cloud-speech-v2 = "0.37"
serde_json.workspace = true

[dev-dependencies]
synapto-test.workspace = true
synapto.workspace = true
test-storage-local = { package = "synapto-storage-local", path = "../../../crates/test/storage-providers/local" }
test-datadir-ephemeral = { package = "synapto-datadir-ephemeral", path = "../../../crates/test/datadir-providers/ephemeral" }

