[package]
name = "synapto-plugin-tts-elevenlabs"
version = "0.1.0-dev.1"
edition = "2024"
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
synapto-interface.workspace = true
async-trait.workspace = true
serde.workspace = true
tracing.workspace = true
elevenlabs-sdk = { version = "0.1" }
