[package]
name = "synapto-plugin-tts-elevenlabs"
version.workspace = true
edition = "2024"
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
synapto-interface.workspace = true
async-trait.workspace = true
serde.workspace = true
tracing.workspace = true
elevenlabs-sdk = { version = "0.1" }

[dev-dependencies]
synapto-test.workspace = true
synapto.workspace = true
tokio.workspace = true

