[package]
name = "synapto-datadir-ephemeral"
description = "Ephemeral data directory provider for synapto testing"
version.workspace = true
edition = "2024"
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
synapto.workspace = true
synapto-interface.workspace = true
tempfile = "3"
