[package]
name = "synapto-storage-local"
description = "Local filesystem storage provider for synapto"
version.workspace = true
edition = "2024"
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
synapto-interface.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
async-trait.workspace = true
tracing.workspace = true

dashmap = "6"
uuid = { version = "1", features = ["v4"] } # For temporary file naming

[dev-dependencies]
tempfile = "3"
